# cmake_xenomai

./: LICENSE  README.md  bootstrap.c
cmake/modules/: FindXenomai.cmake  FindXenomai_Version.c  Findxenomai.cmake  bootstrap-shl.c  bootstrap-template.h  bootstrap.c
config/: bootstrap-template.h  install_cmakeconfig.sh  xenomai-config-version.cmake.in  xenomai-config.cmake.in  xenomai-macros.cmake.in
config/cobalt/: xenomai-targets-noconfig.cmake.in  xenomai-targets.cmake.in
config/mercury/: xenomai-targets-noconfig.cmake.in  xenomai-targets.cmake.in
config_template/: CMakeLists.txt  README.md  create_template.sh  install_cmakeconfig.sh  postprocess.sh  test.c  xenomai-config.cmake.in  xenomai-macros.cmake
examples/alchemy/: CMakeLists.txt
examples/alchemy/cobalt/: CMakeLists.txt
examples/posix/cobalt/: CMakeLists.txt
examples/posix/cyclictest/: CMakeLists.txt  cyclictest.c
examples/template/: CMakeLists.txt
examples/template/src/: CMakeLists.txt  main.c
patchset/: 0001-add-an-flexible-bootstrap-template-header.patch  0001-add-support-for-installing-CMake-config-files.patch  0001-separate-bootstrap-code-to-get-commandline-move-it-i.patch  0002-add-a-header-to-create-flexible-bootstrap-code.patch  0002-add-xenomai_init_fetchargv-function-to-xenomai.patch  0002-utils-cmake-install-missing-header.patch  0003-add-an-extensible-xenomai_init-function.patch  0003-provide-an-extended-xenomai_init-function.patch  0004-add-support-for-installing-CMake-config-files.patch  0004-improve-trace-messages-by-fetching-the-program-name-.patch  0005-pass-module-name-to-xenomai_init.patch  0005-use-glibc-constructors.patch  0006-fix-add-modname.patch  0007-add-support-for-installing-CMake-config-files.patch
test/: CMakeLists.txt  helper.h  main_defined.c  normal.c  wrap_main_defined.c
upstream/: bootstrap-template.h  bootstrap_fetchargv.h
